--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon app.js",
+    "dev": "nodemon --exec npm run start",
+    "start": "babel-node ./bin/www",
     "preinstall": "npx npm-force-resolutions"
 
   },
@@ -18,6 +19,13 @@
     "node": ">=8.9.1"
   },
   "dependencies": {
+    "@babel/cli": "7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
     "async": "^3.2.4",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.7.2",
@@ -79,12 +87,15 @@
     "twilio": "^3.83.4",
     "unzip": "^0.1.11",
     "v": "^0.3.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1",
     "xregexp": "^5.1.1"
   },
   "overrides": {
     "graceful-fs": "^4.2.10"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.1.0",
