--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,6 @@
     "test": "mocha",
     "start": "nodemon app.js",
     "preinstall": "npx npm-force-resolutions"
-
   },
   "resolutions": {
     "graceful-fs": "^4.2.10"
@@ -53,6 +52,7 @@
     "html-pdf": "^2.2.0",
     "html-to-text": "^9.0.2",
     "htmlparser": "^1.7.7",
+    "http-status-codes": "^2.2.0",
     "ioredis": "^5.2.4",
     "json2csv": "^5.0.7",
     "lodash": "^4.17.21",
