--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
+    "agenda": "^5.0.0",
     "async": "^3.2.4",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.7.2",
@@ -54,6 +55,7 @@
     "htmlparser": "^1.7.7",
     "http-status-codes": "^2.2.0",
     "ioredis": "^5.2.4",
+    "joi": "^17.7.0",
     "json2csv": "^5.0.7",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
