Added Swagger file with some Shift module and Leave Planner module APIs

--- a/backend/package.json
+++ b/backend/package.json
@@ -84,6 +84,7 @@
     "sharp": "^0.31.2",
     "ssh2-sftp-client": "^9.0.4",
     "striptags": "^3.2.0",
+    "swagger-ui-express": "^4.6.2",
     "sync-each": "^1.0.1",
     "twilio": "^3.83.4",
     "unzip": "^0.1.11",
