--- a/backend/package.json
+++ b/backend/package.json
@@ -62,7 +62,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "mongoose-paginate": "^5.0.3",
-    "multer": "^1.3.0",
+    "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "node-csv": "^0.1.2",
     "node-fetch": "^2.6.7",
